Added ENV vars for database config. Added also server_dev and console_dev to start the server and execute console in preloading ENV vars dev environment

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,13 @@ notification_poc-*.tar
 # secrets files as long as you replace their contents by environment
 # variables.
 /config/*.secret.exs
+
+# Elixir Language Server (ElixirLS)
+# https://github.com/JakeBecker/elixir-ls
+/.elixir_ls
+
+# ASDF versions
+/.tool-versoins
+
+# Environment Variables
+/.env
